--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,33 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="time-block">
+        <div class="row">
+          <div class="col-1">12AM</div>
+          <textarea id="12am" class="col-10"></textarea>
+          <button type="submit" class="saveBtn col-1"></button>
+        </div>
+        <div class="row">
+          <div class="col-1">1AM</div>
+          <textarea id="1am" class="col-10"></textarea>
+          <button type="submit" class="saveBtn col-1"></button>
+        </div>
+        <div class="row">
+          <div class="col-1">2AM</div>
+          <textarea id="2am" class="col-10"></textarea>
+          <button type="submit" class="saveBtn col-1"></button>
+        </div>
+        <div class="row">
+          <div class="col-1">3AM</div>
+          <textarea id="3am" class="col-10"></textarea>
+          <button type="submit" class="saveBtn col-1"></button>
+        </div>
+        <div class="row">
+          <div class="col-1">4AM</div>
+          <textarea id="4am" class="col-10"></textarea>
+          <button type="submit" class="saveBtn col-1"></button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
