--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,29 +32,54 @@
       <!-- Timeblocks go here -->
       <div class="time-block">
         <div class="row">
-          <div class="col-1">12AM</div>
-          <textarea id="12am" class="col-10"></textarea>
-          <button type="submit" class="saveBtn col-1"></button>
+          <div class="col-1">9AM</div>
+          <textarea id="9" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(9)" class="saveBtn col-1">🔒 </button>
         </div>
         <div class="row">
-          <div class="col-1">1AM</div>
-          <textarea id="1am" class="col-10"></textarea>
-          <button type="submit" class="saveBtn col-1"></button>
+          <div class="col-1">10AM</div>
+          <textarea id="10" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(10)" class="saveBtn col-1">🔒 </button>
         </div>
         <div class="row">
-          <div class="col-1">2AM</div>
-          <textarea id="2am" class="col-10"></textarea>
-          <button type="submit" class="saveBtn col-1"></button>
+          <div class="col-1">11AM</div>
+          <textarea id="11" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(11)" class="saveBtn col-1">🔒 </button>
         </div>
         <div class="row">
-          <div class="col-1">3AM</div>
-          <textarea id="3am" class="col-10"></textarea>
-          <button type="submit" class="saveBtn col-1"></button>
+          <div class="col-1">12PM</div>
+          <textarea id="12" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(12)" class="saveBtn col-1">🔒 </button>
         </div>
         <div class="row">
-          <div class="col-1">4AM</div>
-          <textarea id="4am" class="col-10"></textarea>
-          <button type="submit" class="saveBtn col-1"></button>
+          <div class="col-1">1PM</div>
+          <textarea id="1" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(1)" class="saveBtn col-1">🔒 </button>
+        </div>
+        <div class="row">
+          <div class="col-1">2PM</div>
+          <textarea id="21" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(21)" class="saveBtn col-1">🔒 </button>
+        </div>
+        <div class="row">
+          <div class="col-1">3PM</div>
+          <textarea id="21" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(21)" class="saveBtn col-1">🔒 </button>
+        </div>
+        <div class="row">
+          <div class="col-1">1PM</div>
+          <textarea id="21" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(21)" class="saveBtn col-1">🔒 </button>
+        </div>
+        <div class="row">
+          <div class="col-1">1PM</div>
+          <textarea id="21" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(21)" class="saveBtn col-1">🔒 </button>
+        </div>
+        <div class="row">
+          <div class="col-1">1PM</div>
+          <textarea id="21" class="col-10 input"></textarea>
+          <button type="submit" onclick="saveText(21)" class="saveBtn col-1">🔒 </button>
         </div>
       </div>
     </div>
