--- a/index.html
+++ b/index.html
@@ -35,52 +35,52 @@
         
         <div class="row time-block" id="9">
           <div class="col-1 hour">9AM</div>
-          <textarea id="9" class="col-10"></textarea>
+          <textarea id="9am" class="col-10"></textarea>
           <button type="submit" onclick="saveText(9)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="10">
           <div class="col-1 hour">10AM</div>
-          <textarea id="10" class="col-10"></textarea>
+          <textarea id="10am" class="col-10"></textarea>
           <button type="submit" onclick="saveText(10)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="11">
           <div class="col-1 hour">11AM</div>
-          <textarea id="11" class="col-10"></textarea>
+          <textarea id="11am" class="col-10"></textarea>
           <button type="submit" onclick="saveText(11)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="12">
           <div class="col-1 hour">12PM</div>
-          <textarea id="12" class="col-10"></textarea>
+          <textarea id="12pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(12)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="13">
           <div class="col-1 hour">1PM</div>
-          <textarea id="13" class="col-10"></textarea>
+          <textarea id="13pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(13)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="14">
           <div class="col-1 hour">2PM</div>
-          <textarea id="14" class="col-10"></textarea>
+          <textarea id="14pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(14)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="15">
           <div class="col-1 hour">3PM</div>
-          <textarea id="15" class="col-10"></textarea>
+          <textarea id="15pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(15)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="16">
           <div class="col-1 hour">4PM</div>
-          <textarea id="16" class="col-10"></textarea>
+          <textarea id="16pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(16)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="17">
           <div class="col-1 hour">5PM</div>
-          <textarea id="17" class="col-10"></textarea>
+          <textarea id="17pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(17)" class="saveBtn col-1">💾 </button>
         </div>
         <div class="row time-block" id="21">
           <div class="col-1 hour">9PM</div>
-          <textarea id="21" class="col-10"></textarea>
+          <textarea id="21pm" class="col-10"></textarea>
           <button type="submit" onclick="saveText(21)" class="saveBtn col-1">💾 </button>
         </div>
       </div>
